@@ -1,6 +1,12 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-08-11
+  Added a "custom settings" area to the default settings.php which is created during the installation process.  Also changed some of the wording in the
+  settings.php file, for clarity.
+  
+  
+
 2021-08-10
   Made the access stats report look nicer.
   
